asfdemux: Handle initial 0 timestamp that should have been -1

https://bugzilla.gnome.org/show_bug.cgi?id=719660